--- a/Index1.html
+++ b/Index1.html
@@ -3,4 +3,6 @@
 <head>
     <title>Test For GITHUB Mini course</title>
 </head>
-<body> <h1>Hello World !!!!</h1></body
+<body>
+    <img src="TIGGER.png"/>
+    <h1>WELLCOME TO TIGGER MANGA</h1></body
