--- a/Index1.html
+++ b/Index1.html
@@ -5,4 +5,7 @@
 </head>
 <body>
     <img src="TIGGER.png"/>
-    <h1>MANGA Isekai</h1></body
+    <h1>MANGA Isekai</h1>
+    <b>MANGA TH </b>
+    </body
+    
