--- a/Index1.html
+++ b/Index1.html
@@ -5,11 +5,6 @@
 </head>
 <body>
     <img src="TIGGER.png"/>
-<<<<<<< HEAD
-    <h1>WELLCOME TO TIGGER MANGA</h1></body
-=======
-    <h1>MANGA Isekai</h1>
-    <b>MANGA TH </b>
+    <h1>WELCOME TO TIGGER MANGA</h1>
     </body
     
->>>>>>> MANGA
