--- a/Index1.html
+++ b/Index1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <img src="TIGGER.png"/>
-    <h1>MANGA Isekai</h1>
+    <h1>WELCOME TO TIGGER MANGA</h1>
     <b> MANGA TH </b>
     </body
     
